--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -12,7 +12,179 @@
     <body>
 
         <!-- Add your site or application content here -->
-        <p>Content</p>
+        <div class="container-fluid brosa-hero">
+            <div class="container" style="height:100%">
+                <div class="row text-center hero-row">
+                    <div><span class="hero-initial">We're</span></div>
+                </div>
+                <div class="row" style="padding:0 0 0 0"><!--
+                    --><div class="col-md-3 brosa-col-md-vcenter hidden-sm hidden-xs" style="position:relative;">
+                            <div class="brosa-line" style="position:absolute;left:-50px;right:0;height:5px;background-color:#7BEDC7;"></div>
+                        </div><!--
+                    --><div class="col-md-6  text-center  brosa-col-md-vcenter">
+                        <div></div>
+                        <div class="hero-title">Creative Agency</div>
+                    </div><!--
+                    --><div class="col-md-3 brosa-col-md-vcenter">&nbsp;</div><!--
+                    --></div>
+                <div class="row" style="padding-bottom: 125px;">
+                    <div class="col-md-6 col-md-offset-3">
+                        <div class="hero-sub-title text-center">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-5 hidden-sm  hidden-xs" >
+                        <div style="width: 100%;height:400px;background: url(images/inset-image.png) no-repeat center center"></div>
+                    </div>
+                    <div class="col-md-1 hidden-sm hidden-xs">
+
+                    </div>
+                    <div class="col-md-6">
+                        <div class="brosa-block-title">
+                            History of Agency
+                        </div>
+                        <div class="brosa-block-text">
+                            Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi modi tempora incidunt ut labore.
+                        </div>
+                        <div class="brosa-actions" style="padding-top:40px;">
+                            <div class="row">
+                                <div class="col-md-4 col-md-offset-8">
+                                    <button class="btn btn-block btn-primary brosa-button">
+                                        Read More
+                                    </button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container" style="padding-top:200px;">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="brosa-block-title text-center">
+                        Pricing Plans
+                    </div>
+                    <p class="text-center">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="brosa-card">
+                        <div class="brosa-block-title">
+                            Basic
+                        </div>
+                        <div><span class="hero-initial mod-sm mod-invert">$35.95 Monthly</span></div>
+                        <div class="brosa-card-content">
+                            <ul class="brosa-list">
+                                <li class="list-item">
+                                    Lorem ipsum dolor sit amet
+                                </li>
+                                <li class="list-item">
+                                    Consectetuer adipiscing elit
+                                </li>
+                                <li class="list-item">
+                                    Sed diam nonummy
+                                </li>
+                                <li class="list-item">
+                                    Nibh euismod tincidunt
+                                </li>
+                                <li class="list-item">
+                                    Ut laoreet dolore
+                                </li>
+                                <li class="list-item">
+                                    Magna aliquam erat volutpat
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="brosa-card-action">
+                            <button class="btn btn-primary brosa-button">
+                                        Get Started
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="brosa-card">
+                        <div class="brosa-block-title">
+                            Advanced
+                        </div>
+                        <div><span class="hero-initial mod-sm mod-invert">$35.95 Monthly</span></div>
+                        <div class="brosa-card-content">
+                            <ul class="brosa-list">
+                                <li class="list-item">
+                                    Lorem ipsum dolor sit amet
+                                </li>
+                                <li class="list-item">
+                                    Consectetuer adipiscing elit
+                                </li>
+                                <li class="list-item">
+                                    Sed diam nonummy
+                                </li>
+                                <li class="list-item">
+                                    Nibh euismod tincidunt
+                                </li>
+                                <li class="list-item">
+                                    Ut laoreet dolore
+                                </li>
+                                <li class="list-item">
+                                    Magna aliquam erat volutpat
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="brosa-card-action">
+                            <button class="btn btn-primary brosa-button">
+                                        Get Started
+                            </button>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="brosa-card">
+                         <div class="brosa-block-title">
+                            Smart
+                        </div>
+                        <div><span class="hero-initial mod-sm mod-invert">$35.95 Monthly</span></div>
+                        <div class="brosa-card-content">
+                            <ul class="brosa-list">
+                                <li class="list-item">
+                                    Lorem ipsum dolor sit amet
+                                </li>
+                                <li class="list-item">
+                                    Consectetuer adipiscing elit
+                                </li>
+                                <li class="list-item">
+                                    Sed diam nonummy
+                                </li>
+                                <li class="list-item">
+                                    Nibh euismod tincidunt
+                                </li>
+                                <li class="list-item">
+                                    Ut laoreet dolore
+                                </li>
+                                <li class="list-item">
+                                    Magna aliquam erat volutpat
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="brosa-card-action">
+                            <button class="btn btn-primary brosa-button">
+                                        Get Started
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
 
         <script src="scripts/app.js"></script>
     </body>
