[WIP] Card Shadow

--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="container" style="padding-top:200px;">
-            <div class="row">
+            <div class="row brosa-block">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="brosa-block-title text-center">
                         Pricing Plans
@@ -73,7 +73,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row brosa-block">
                 <div class="col-md-4">
                     <div class="brosa-card">
                         <div class="brosa-block-title">
