[WIP] List With Tick

--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -11,6 +11,17 @@
     </head>
     <body>
 
+        <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+            <symbol id="menu" viewBox="0 0 24 24" width="32" height="32">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
+            </symbol>
+            <symbol id="tick" viewBox="0 0 24 24" width="32" height="32">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/>
+            </symbol>
+        </svg>
+
         <!-- Add your site or application content here -->
         <div class="container-fluid brosa-hero">
             <div class="container" style="height:100%">
@@ -83,22 +94,64 @@
                         <div class="brosa-card-content">
                             <ul class="brosa-list">
                                 <li class="list-item">
-                                    Lorem ipsum dolor sit amet
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Lorem ipsum dolor sit amet</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Consectetuer adipiscing elit
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Consectetuer adipiscing elit</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Sed diam nonummy
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Sed diam nonummy</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Nibh euismod tincidunt
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Nibh euismod tincidunt</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Ut laoreet dolore
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Ut laoreet dolore</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Magna aliquam erat volutpat
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Magna aliquam erat volutpat</div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
@@ -118,22 +171,64 @@
                         <div class="brosa-card-content">
                             <ul class="brosa-list">
                                 <li class="list-item">
-                                    Lorem ipsum dolor sit amet
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Lorem ipsum dolor sit amet</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Consectetuer adipiscing elit
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Consectetuer adipiscing elit</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Sed diam nonummy
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Sed diam nonummy</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Nibh euismod tincidunt
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Nibh euismod tincidunt</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Ut laoreet dolore
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Ut laoreet dolore</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Magna aliquam erat volutpat
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Magna aliquam erat volutpat</div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
@@ -155,22 +250,64 @@
                         <div class="brosa-card-content">
                             <ul class="brosa-list">
                                 <li class="list-item">
-                                    Lorem ipsum dolor sit amet
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Lorem ipsum dolor sit amet</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Consectetuer adipiscing elit
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Consectetuer adipiscing elit</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Sed diam nonummy
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Sed diam nonummy</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Nibh euismod tincidunt
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Nibh euismod tincidunt</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Ut laoreet dolore
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Ut laoreet dolore</div>
+                                    </div>
                                 </li>
                                 <li class="list-item">
-                                    Magna aliquam erat volutpat
+                                    <div class="brosa-media">
+                                        <div class="media-icon">
+                                            <svg>
+                                                <use xlink:href="#tick" />
+                                            </svg>
+                                        </div>
+                                        <div class="media-body">Magna aliquam erat volutpat</div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
