Top Menu With Scroll Effect

--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -24,6 +24,24 @@
             </symbol>
         </svg>
 
+        <div id="brosa-navbar" class="navbar navbar-fixed-top navbar-default">
+            <div class="container-fluid">
+                <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand brosa-brand" href="#">AGENCY.</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">
+                            <svg>
+                                <use xlink:href="#menu" />
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                </div>
+            </div>
+        </div>
         <!-- Add your site or application content here -->
         <div class="container-fluid brosa-hero">
             <div class="container" style="height:100%">
