--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -66,7 +66,7 @@
                     <!--
                     -->
                 </div>
-                <div class="row" style="padding-bottom: 125px;">
+                <div class="row hero-bottom-row">
                     <div class="col-md-6 col-md-offset-3">
                         <div class="hero-sub-title text-center">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -81,7 +81,7 @@
 
                     </div>
                     <div class="col-md-6">
-                        <div class="brosa-block-title">
+                        <div class="brosa-block-title mod-sm-padding">
                             History of Agency
                         </div>
                         <div class="brosa-block-text">
