--- a/app/index.html
+++ b/app/index.html
@@ -81,8 +81,8 @@
 
                     </div>
                     <div class="col-md-6">
-                        <div class="brosa-block-title mod-sm-padding">
-                            History of Agency
+                        <div class="brosa-block-title mod-sm-padding mod-highlight">
+                            <span>History of Agency</span>
                         </div>
                         <div class="brosa-block-text">
                             Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam
@@ -106,7 +106,7 @@
             <div class="row brosa-block">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="brosa-block-title text-center">
-                        Pricing Plans
+                        <span class="mod-highlight">Pricing Plans</span>
                     </div>
                     <p class="text-center">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
