--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Website Title</title>
-        <meta name="description" content="">
+        <title>Agency (Brosa)</title>
+        <meta name="description" content="Demo 'Agency' site for Brosa. Prepared by Md Kamrul Islam">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="apple-icon.png">
 
         <link rel="stylesheet" href="styles/styles.css">
     </head>
